--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,9 @@ body, html {
     width:100%;
     background-color: rgb(53, 53, 53);
     /* align-items:center; */
-    
+    font-family: 'Roboto Condensed', sans-serif;
+    margin:0;
+    padding:0;
   } 
   .bg {
     /* The image used */
@@ -30,12 +32,6 @@ H1{
 	background: linear-gradient(to right, #ffee00 0%, #2904d1 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-  }
-  .bg a{
-    display: inline-block;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgb(0, 217, 255) ), to(rgb(255, 247, 0)));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; /* reset Font Awesome's display:inline-block */
   }
   .top_p{
     font-size: 1.7rem;
@@ -106,9 +102,6 @@ H1{
     background-color: #fbff00;
     width: 100px;
     bottom: -12px;
-  }
-  div{
-      color: white;
   }
 .containerTab {
   display:flex;
@@ -218,6 +211,9 @@ color: #f2c87b;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 } 
+div{
+  color: white;
+}
 #about{
   margin-top: 80px;
 }
@@ -247,4 +243,126 @@ color: #f2c87b;
 }
 .project img{
   width: 70%;
+}
+.bg ul {
+  position: absolute ;
+  bottom: 20%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  display:flex;
+  margin:0;
+  padding:0;
+}
+
+.bg ul li {
+  list-style:none;
+  margin:0 5px;
+}
+
+.bg ul li a .fab {
+  font-size: 40px;
+  color: #f2c87b;
+  line-height:80px;
+  transition: .5s;
+  padding-right: 14px;
+}
+
+.bg ul li a span {
+  padding:0;
+  margin:0;
+  position:absolute;
+  top: 30px;
+  color:  #f2c87b;
+  letter-spacing: 4px;
+  transition: .5s;
+}
+
+.bg ul li a {
+  text-decoration: none;
+  display:absolute;
+  position: relative;
+  display:block;
+  width:210px;
+  height:80px;
+  background: rgb(68, 66, 66);
+  text-align:left;
+  padding-left: 20px;
+  transform: rotate(-30deg) skew(25deg) translate(0,0);
+  transition:.5s;
+  box-shadow: -20px 20px 10px rgba(0,0,0,.5);
+}
+.bg ul li a:before {
+  content: '';
+  position: absolute;
+  top:10px;
+  left:-20px;
+  height:100%;
+  width:20px;
+  background: #b1b1b1;
+  transform: .5s;
+  transform: rotate(0deg) skewY(-45deg);
+}
+.bg ul li a:after {
+  content: '';
+  position: absolute;
+  bottom:-20px;
+  left:-10px;
+  height:20px;
+  width:100%;
+  background: #b1b1b1;
+  transform: .5s;
+  transform: rotate(0deg) skewX(-45deg);
+}
+
+.bg ul li a:hover {
+  transform: rotate(-30deg) skew(25deg) translate(20px,-15px);
+  box-shadow: -50px 50px 50px rgba(0,0,0,.5);
+}
+
+.bg ul li:hover .fab {
+  color:#fff;
+}
+
+.bg ul li:hover span {
+  color:#fff;
+}
+
+.bg ul li:hover:nth-child(1) a{
+  background: #3b5998;
+}
+.bg ul li:hover:nth-child(1) a:before{
+  background: #365492;
+}
+.bg ul li:hover:nth-child(1) a:after{
+  background: #4a69ad;
+}
+
+.bg ul li:hover:nth-child(2) a{
+  background: #00aced;
+}
+.bg ul li:hover:nth-child(2) a:before{
+  background: #097aa5;
+}
+.bg ul li:hover:nth-child(2) a:after{
+  background: #53b9e0;
+}
+
+.bg ul li:hover:nth-child(3) a{
+  background: #dd4b39;
+}
+.bg ul li:hover:nth-child(3) a:before{
+  background: #b33a2b;
+}
+.bg ul li:hover:nth-child(3) a:after{
+  background: #e66a5a;
+}
+
+.bg ul li:hover:nth-child(4) a{
+  background: #e4405f;
+}
+.bg ul li:hover:nth-child(4) a:before{
+  background: #d81c3f;
+}
+.bg ul li:hover:nth-child(4) a:after{
+  background: #e46880;
 }
