--- a/public/css/project.css
+++ b/public/css/project.css
@@ -1,58 +1,58 @@
-body, html {
-  height: 100%;
-  width:100%;
-  background-color: rgb(53, 53, 53);
-  /* align-items:center; */
-  
-} 
+body,
+html {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(53, 53, 53);
+    /* align-items:center; */
+}
 .work-box {
-  margin-bottom: 3rem;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background-color: black;
+    margin-bottom: 3rem;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: black;
 }
 
 .work-box:hover img {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 .work-img {
-  display: block;
-  overflow: hidden;
+    display: block;
+    overflow: hidden;
 }
 
 .work-img img {
-  transition: all 1s;
+    transition: all 1s;
 }
 
 .work-content {
-  padding: 2rem 3% 1rem 4%;
+    padding: 2rem 3% 1rem 4%;
 }
 
 .work-content .w-more {
-  color: white;
-  font-size: .8rem;
+    color: white;
+    font-size: 0.8rem;
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+    color: #0078ff;
 }
 
 .work-content .w-like {
-  font-size: 2.5rem;
-  color: #0078ff;
-  float: right;
+    font-size: 2.5rem;
+    color: #0078ff;
+    float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+    color: #0078ff;
 }
 
 .work-content .w-like .num-like {
-  font-size: .7rem;
+    font-size: 0.7rem;
 }
 
 .w-title {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
