--- a/public/github-widget-master/github-widget.css
+++ b/public/github-widget-master/github-widget.css
@@ -1,47 +1,48 @@
 .gw-repo-outer {
-  float: left;
-  width: 50%;
-  color: white; 
+    float: left;
+    width: 50%;
+    color: white;
 }
 .gw-repo-outer:nth-child(2n + 1) {
-  clear: left;
+    clear: left;
 }
 .gw-repo {
-  padding: 0.5em 0;
-  margin: 0 1.5em 1em 0;
-  border-top: 1px solid #ccc;
+    padding: 0.5em 0;
+    margin: 0 1.5em 1em 0;
+    border-top: 1px solid #ccc;
 }
 .gw-repo:nth-child(2n) {
-  margin: 0 0 1em 1.5em;
+    margin: 0 0 1em 1.5em;
 }
-.gw-title{
-  margin-bottom: 0.3em;
+.gw-title {
+    margin-bottom: 0.3em;
 }
 .gw-name {
-  font-weight: bold;
+    font-weight: bold;
 }
 .gw-stats {
-  display: inline-block;
-  margin: 0;
-  float: right;
+    display: inline-block;
+    margin: 0;
+    float: right;
 }
-.gw-watchers, .gw-forks {
-  display: inline-block;
-  height: 21px;
-  padding: 0 5px 0 23px;
-  line-height: 21px;
-  background: transparent url('repostat.png') no-repeat 0 0;
+.gw-watchers,
+.gw-forks {
+    display: inline-block;
+    height: 21px;
+    padding: 0 5px 0 23px;
+    line-height: 21px;
+    background: transparent url("repostat.png") no-repeat 0 0;
 }
 .gw-watchers {
-  background-position: 5px -2px;
+    background-position: 5px -2px;
 }
 .gw-forks {
-  background-position: 5px -52px;
+    background-position: 5px -52px;
 }
 .gw-lang {
-  font-size: 0.8em;
-  color: rgb(255, 251, 2);
+    font-size: 0.8em;
+    color: rgb(255, 251, 2);
 }
 .gw-clearer {
-  clear: left;
+    clear: left;
 }
