--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ H1 {
 
 .bg ul {
     position: absolute;
-    bottom: 20%;
+    bottom: 50px;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
