--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ html {
 }
 .bg {
     /* The image used */
+    display: block;
     background-image: url("https://www.vippng.com/png/full/361-3612977_website-background-png-tech-background-image-for-website.png");
     background-color: rgb(36, 39, 41);
     /* Half height */
@@ -34,132 +35,117 @@ H1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .top_p {
     font-size: 1.7rem;
     height: 0%;
+    margin-bottom: 0%;
     text-align: center;
     color: #f2c87b;
 }
 
-.bg ul {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.bg ul li {
-    list-style: none;
-    margin: 0 5px;
-}
-
-.bg ul li a .fab {
-    font-size: 40px;
-    color: #f2c87b;
-    line-height: 80px;
-    transition: 0.5s;
-    padding-right: 14px;
-}
-
-.bg ul li a span {
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    top: 30px;
-    color: #f2c87b;
-    letter-spacing: 4px;
-    transition: 0.5s;
-}
-
-.bg ul li a {
-    text-decoration: none;
-    display: absolute;
+.contact {
+    display: inline-block;
     position: relative;
-    display: block;
-    width: 210px;
-    height: 80px;
-    background: rgb(58, 64, 66);
-    text-align: left;
-    padding-left: 20px;
-    transform: rotate(-30deg) skew(25deg) translate(0, 0);
-    transition: 0.5s;
-    box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
-}
-.bg ul li a:before {
-    content: "";
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background: rgb(58, 64, 66);
-    transform: 0.5s;
-    transform: rotate(0deg) skewY(-45deg);
-}
-.bg ul li a:after {
-    content: "";
-    position: absolute;
-    bottom: -20px;
-    left: -10px;
-    height: 20px;
-    width: 100%;
-    background: rgb(58, 64, 66);
-    transform: 0.5s;
-    transform: rotate(0deg) skewX(-45deg);
+    top: -15%;
+    left: 50%;
+    text-align: center;
+    
+    align-items: center;
+    transform: translate(-50%, -50%);
+    width: 50%;
 }
 
-.bg ul li a:hover {
-    transform: rotate(-30deg) skew(25deg) translate(20px, -15px);
-    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
-}
 
-.bg ul li:hover .fab {
-    color: #fff;
+    .contact ul{
+        display: inline-block;
+        position: relative;
+        align-items: center;
+        list-style: none;
+    }
+    .contact ul li {
+        width: 75px;
+        height: 75px;
+        line-height: 75px;
+        margin: 0 10px;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 50%;
+        border: 5px solid #D8E2DC;
+        float: left;
+        transition: all 0.5s ease;
+      }
+    .contact ul li .fa {
+        color: #D8E2DC;
+        margin-top: 20px;
+        transition: all 0.5s ease;
+      }
+    .contact   ul li:hover.discord {
+        border: 5px solid #3b5998;
+        box-shadow: 0 0 15px #3b5998;
+        transition: all 0.5s ease;
+      }
+      .contact ul li:hover .fa-discord {
+        color: #3b5998;
+        text-shadow: 0 0 15px #3b5998;
+        transition: all 0.5s ease;
+      }  
+      .contact ul li:hover.instagram {
+        border: 5px solid #bc2a8d;
+        box-shadow: 0 0 15px #bc2a8d;
+        transition: all 0.5s ease;
+      }
+      
+      .contact ul li:hover .fa-instagram-square {
+        color: #bc2a8d;
+        text-shadow: 0 0 15px #bc2a8d;
+        transition: all 0.5s ease;
+      }
+      .contact ul li:hover.github {
+        border: 5px solid  #ffbe33;
+        box-shadow: 0 0 15px #ffbe33;
+        transition: all 0.5s ease;
+      }
+      
+      .contact ul li:hover .fa-github {
+        color:  #ffbe33;
+        text-shadow: 0 0 15px #ffbe33;
+        transition: all 0.5s ease;
+      }
+      .contact ul li:hover.linkedin {
+        border: 5px solid #2aa1bc;
+        box-shadow: 0 0 15px #2aa1bc;
+        transition: all 0.5s ease;
+      }
+      
+      .contact ul li:hover .fa-linkedin {
+        color: #2aa1bc;
+        text-shadow: 0 0 15px #2aa1bc;
+        transition: all 0.5s ease;
+      }
+ @media screen and (max-width: 640px){
+    .contact {
+            position: relative;
+            margin-top: 25%;
+            left: 50%;
+            align-items: center;
+            transform: translate(-50%, -50%);
+        width: 350px;
+    }
+    .contact ul li{
+        margin-top: 25px;
+    }
+  }
+  @media screen and (max-width: 340px){
+    .contact {
+        position: relative;
+        margin-top: 25%;
+        left: 50%;
+        align-items: center;
+        transform: translate(-50%, -50%);
+    width: 350px;
 }
-
-.bg ul li:hover span {
-    color: #fff;
-}
-
-.bg ul li:hover:nth-child(1) a {
-    background: #3b5998;
-}
-.bg ul li:hover:nth-child(1) a:before {
-    background: #365492;
-}
-.bg ul li:hover:nth-child(1) a:after {
-    background: #4a69ad;
-}
-
-.bg ul li:hover:nth-child(2) a {
-    background: #00aced;
-}
-.bg ul li:hover:nth-child(2) a:before {
-    background: #097aa5;
-}
-.bg ul li:hover:nth-child(2) a:after {
-    background: #53b9e0;
-}
-
-.bg ul li:hover:nth-child(3) a {
-    background: #dd4b39;
-}
-.bg ul li:hover:nth-child(3) a:before {
-    background: #b33a2b;
-}
-.bg ul li:hover:nth-child(3) a:after {
-    background: #e66a5a;
-}
-
-.bg ul li:hover:nth-child(4) a {
-    background: #e4405f;
-}
-.bg ul li:hover:nth-child(4) a:before {
-    background: #d81c3f;
-}
-.bg ul li:hover:nth-child(4) a:after {
-    background: #e46880;
+    .contact ul li{
+        margin:15px;
+    }
 }
