--- a/public/css/about.css
+++ b/public/css/about.css
@@ -85,7 +85,7 @@ html,body{
         height: 100%;  
         /* Center and scale the image nicely */
         background-position: center;
-        background-repeat: no-repeat;
+        background-repeat:repeat;
         background-size: cover;
     width:100%;
     /* display:flex;  */
