--- a/public/css/project.css
+++ b/public/css/project.css
@@ -6,7 +6,7 @@ html {
     height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     background-size: cover;
     width: 100%;
     /* display:flex;  */
