--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ html {
     height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     background-size: cover;
 }
 .bg2 {
